# four-fours-rs

./: .gitignore  Cargo.toml  README.md  rayon-wasm.md
.cargo/: config.toml
js/: .swcrc  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/public/: index.html
js/src/: App.tsx  index.tsx  wasm.ts
src/: lib.rs  main.rs  print.rs  search.rs  wasm.rs
src/search/: binary_op.rs  equation.rs  unary_op.rs
