[package]
name = "four-fours"
version = "0.1.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
rayon = "1.5.1"

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.56"
wasm-bindgen-rayon = "1.0.3"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
