[package]
name = "four-fours"
version = "0.1.0"
authors = ["necocen <necocen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
with-rayon = ["rayon", "wasm-bindgen-rayon"]

[profile.release]
lto = true

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.9.0"
fnv = "1.0.7"
log = "0.4.16"
rayon = { version = "1.5.1", optional = true }

[target.wasm32-unknown-unknown.dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
wasm-bindgen-rayon = { version = "1.0.3", optional = true }
